# probelab

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODOS.md  competitor-landscape.md  demo.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
probes/: github-trending.yaml  hackernews-nav.yaml  hackernews.yaml  zhihu-cdp.yaml
probes/browser-use/: amazon-product.yaml  github-repo.yaml  google-search.yaml  hn-front.yaml  imdb-movie.yaml  linkedin-jobs.yaml  pcpartpicker.yaml  wikipedia.yaml
src/probelab/: __init__.py  __main__.py  api.py  baseline.py  browser.py  checker.py  cli.py  cli_v1.py  config.py  diff.py  differ.py  engine.py  guardrails.py  html_report.py  opencli.py  probe.py  repair.py  reporter.py  runner.py  viz.py
src/probelab/adapters/: __init__.py
src/probelab/diagnosis/: __init__.py  classify.py
src/probelab/io/: __init__.py  loader.py  store.py
src/probelab/models/: __init__.py  probe.py  result.py
src/probelab/report/: __init__.py  terminal.py
src/probelab/scan/: api_check.py  generate.py  patterns.py  scanner.py
tests/: conftest.py  test_api.py  test_api_check.py  test_baseline.py  test_browser.py  test_checker.py  test_classify.py  test_cli.py  test_config.py  test_diff.py  test_differ.py  test_html_report.py  test_opencli.py  test_probe.py  test_repair.py  test_runner.py  test_runner_engine_divergence.py  test_scan.py  test_viz.py
